Table users {
  id bigint [pk, increment]
  name varchar
  email varchar
  password varchar
  created_at timestamp
  updated_at timestamp
}

Table categories {
  id bigint [pk, increment]
  name varchar [unique]
  created_at timestamp
  updated_at timestamp
}

Table restaurants {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id]
  name varchar
  description text
  address varchar
  created_at timestamp
  updated_at timestamp
}

Table category_restaurant {
  id bigint [pk, increment]
  category_id bigint [ref: > categories.id]
  restaurant_id bigint [ref: > restaurants.id]
  created_at timestamp
  updated_at timestamp

  indexes {
    (category_id, restaurant_id) [unique]
  }
}

Table reviews {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id]
  restaurant_id bigint [ref: > restaurants.id]
  rating tinyint
  comment text
  created_at timestamp
  updated_at timestamp
}

Table photos {
  id bigint [pk, increment]
  restaurant_id bigint [ref: > restaurants.id]
  url varchar
  created_at timestamp
  updated_at timestamp
}

Table favorites {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id]
  restaurant_id bigint [ref: > restaurants.id]
  created_at timestamp
  updated_at timestamp

  indexes {
    (user_id, restaurant_id) [unique]
  }
}
